[package]
name = "ws-room-test"
version = "0.1.0"
authors = ["TakahiroSato <futurenova52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.9"
actix-web-actors = "1.0.3"
actix-files = "0.1.7"
rand = "0.7.2"
env_logger = "0.7.1"
serde_json = "1.0.41"
serde = { version = "1.0.102", features = ["derive"] }
